// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapDispatchToProps matches the last snapshot 1`] = `
Object {
  "logout": [Function],
  "selectGroup": [Function],
}
`;

exports[`mapStateToProps matches the latest snapshot 1`] = `
Object {
  "avatarUrl": undefined,
  "canModerateCurrentGroup": undefined,
  "currentGroup": SessionBoundModel {
    "_fields": Object {
      "avatarUrl": "someUrl",
      "id": "7",
      "name": "someName",
    },
    "avatarUrl": "someUrl",
  },
  "currentGroupId": "7",
  "currentUser": SessionBoundModel {
    "_fields": Object {
      "id": "33",
      "name": "meUser",
    },
    "id": "33",
  },
  "myGroups": Array [],
  "name": "meUser",
  "topGroups": Array [
    Object {
      "avatarUrl": undefined,
      "bannerUrl": undefined,
      "childGroups": Object {
        "toModelArray": [Function],
      },
      "headerAvatarUrl": undefined,
      "id": "public-context",
      "name": "Public Groups",
      "parentGroups": Object {
        "toModelArray": [Function],
      },
      "slug": "public-context",
    },
    Object {
      "avatarUrl": undefined,
      "bannerUrl": undefined,
      "childGroups": Object {
        "toModelArray": [Function],
      },
      "headerAvatarUrl": undefined,
      "id": "all-groups",
      "name": "All My Groups",
      "parentGroups": Object {
        "toModelArray": [Function],
      },
      "slug": "all-groups",
    },
  ],
}
`;

exports[`mergeProps matches snapshot 1`] = `
Object {
  "canModerateCurrentGroup": true,
  "currentUser": Object {
    "id": "anyid",
  },
  "goToCreateGroup": [Function],
  "goToGroup": [Function],
  "goToGroupSettingsMenu": [Function],
  "goToInvitePeople": [Function],
  "goToMyProfile": [Function],
  "name": "Roy Rogers",
  "navigation": Object {
    "closeDrawer": [MockFunction],
    "navigate": [MockFunction],
  },
  "selectGroup": [MockFunction],
}
`;

exports[`mergeProps matches snapshot 2`] = `
Object {
  "canModerateCurrentGroup": false,
  "currentUser": Object {
    "id": "anyid",
  },
  "goToCreateGroup": [Function],
  "goToGroup": [Function],
  "goToGroupSettingsMenu": [Function],
  "goToInvitePeople": [Function],
  "goToMyProfile": [Function],
  "name": "Roy Rogers",
  "navigation": Object {
    "closeDrawer": [MockFunction],
    "navigate": [MockFunction],
  },
  "selectGroup": [MockFunction],
}
`;
